Fixed z-index bugs

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -4,7 +4,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 1;
+    z-index: $z-index-modal;
     width: 100%;
     height: 100vh;
     background: rgba($black, 0.75);
