--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -4,7 +4,7 @@
     position: absolute;
     right: 4rem;
     bottom: 2rem;
-    z-index: 100;
+    z-index: $z-index-popup;
     min-width: 100px;
     padding: 1rem;
     border-radius: $border-radius;
@@ -17,7 +17,7 @@
     }
 
     &--error {
-        background: $red;
+        background: $red-error;
     }
 }
 
