--- a/src/components/SelectButton/Dropdown/Dropdown.scss
+++ b/src/components/SelectButton/Dropdown/Dropdown.scss
@@ -15,7 +15,7 @@
         0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
     border-radius: 16px;
     border: 1px solid $blue-dark-accent;
-    z-index: 1;
+    z-index: $z-index-dropdown;
 
     &.active {
         visibility: visible;
